# fund

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  .statix.toml  .taplo.toml  .tmux.conf  .yamllint  .yamllint.yaml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  bacon.toml  devenv.nix  devenv.yaml  docker-compose.yaml  maskfile.md  notes.md  prefect.yaml  proposal_followups.md  proposal_transcript.md  push.sh  pyproject.toml  schema.sql  secretspec.toml  vulture_whitelist.py
.claude/: settings.local.json
.flox/: env.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  assignment_configuration.yaml  auto-reviewer-assign.yml  dependabot.yml  label_configuration.yaml
.ralph/: .gitignore  README.md  marketplace.md
.sqlx/: query-118407aacb867f69722be5b93908271f4680768ae0b421616744df3790555e8c.json  query-15ac7322411af85506bd268ef53bd2c5c531c197c743d1092a8b61315f5a519a.json  query-1cda3f7e73970a1ad1bfe1a3bb8597db72d3aaf2ea5e4fa87c185ebe16064eca.json  query-221f3ca6765b8912b3819de14d531e675172b50da5a334539c62c912369d47bf.json  query-24bec3bcfe931131e862454d3d3e2ef5c6df67090c0c112ab7b9c9ea8831c92e.json  query-2c2e4e669c068216901e32ccd29daa544367570777958fd2e48aa5799d996832.json  query-308b46d23b3806432063e5e6179d0f3639b9aa1f1a96e01efeaceee978fe88a2.json  query-382eca123933bd7adf21d29788176ba6e6c5f812ee6b94604495510868e58aeb.json  (+33 more)
applications/data_manager/: Cargo.toml  Dockerfile  bacon.toml
applications/data_manager/src/: backfill.rs  data.rs  database.rs  db.rs  equity_bars.rs  equity_details.rs  equity_quotes.rs  errors.rs  export.rs  health.rs  lib.rs  main.rs  metrics.rs  performance.rs  portfolios.rs  predictions.rs  router.rs  scheduler.rs  startup.rs  state.rs  storage.rs
applications/data_manager/tests/: test_data.rs  test_database.rs  test_errors.rs  test_handlers.rs  test_state_and_health.rs  test_storage.rs
applications/data_manager/tests/common/: mod.rs
applications/datamanager/: Cargo.toml  Dockerfile
applications/datamanager/src/: data.rs  equity_bars.rs  equity_details.rs  errors.rs  lib.rs  main.rs  portfolios.rs  predictions.rs  router.rs  startup.rs  state.rs  storage.rs
applications/datamanager/tests/: test_data.rs  test_equity_bars.rs  test_equity_details.rs  test_errors.rs  test_handlers.rs  test_health.rs  test_main.rs  test_portfolios.rs  test_predictions.rs  test_router.rs  test_state.rs  test_state_and_health.rs  test_storage.rs
applications/datamanager/tests/common/: mod.rs
applications/ensemble_manager/: Dockerfile  pyproject.toml
applications/ensemble_manager/src/ensemble_manager/: metrics.py  predictions_schema.py  preprocess.py  server.py
applications/ensemble_manager/tests/: test_predictions_schema.py  test_preprocess.py  test_server.py
applications/ensemble_model/: Cargo.toml
applications/ensemble_model/src/: artifact.rs  database.rs  lib.rs  main.rs  predict.rs  server.rs  state.rs
applications/equitypricemodel/: Dockerfile  pyproject.toml
applications/equitypricemodel/src/equitypricemodel/: combine_data.py  predictions_schema.py  server.py  tide_data.py  tide_model.py  trainer.py
applications/equitypricemodel/tests/: test_equity_details_schema.py  test_predictions_schema.py  test_preprocess.py  test_server.py  test_tide_data.py  test_tide_model.py  test_trainer.py
applications/portfoliomanager/: Dockerfile  pyproject.toml
applications/portfoliomanager/src/portfoliomanager/: alpaca_client.py  beta.py  consolidation.py  data_client.py  enums.py  exceptions.py  portfolio_schema.py  regime.py  report.py  risk_management.py  server.py  statistical_arbitrage.py
applications/portfoliomanager/tests/: conftest.py  test_alpaca_client.py  test_beta.py  test_consolidation.py  test_data_client.py  test_portfolio_schema.py  test_portfolio_server.py  test_regime.py  test_report.py  test_risk_management.py  test_statistical_arbitrage.py
dashboards/: Dockerfile
libraries/rust/: Cargo.toml
libraries/rust/src/: freshness.rs  lib.rs  market.rs  orders.rs  portfolio.rs  primitives.rs  signals.rs  trading.rs
models/tide/: Dockerfile  pyproject.toml
models/tide/src/tide/: data.py  deploy.py  evaluate.py  model.py  notifications.py  register_blocks.py  run.py  tasks.py  tide_data.py  tide_model.py  tracking.py  trainer.py  workflow.py
models/tide/tests/: conftest.py  test_data.py  test_deploy.py  test_evaluate.py  test_model.py  test_notifications.py  test_register_blocks.py  test_run.py  test_tasks.py  test_tide_data.py  test_tide_model.py  test_tracking.py  test_trainer.py  test_workflow.py
models/tide_model/: Cargo.toml
models/tide_model/src/: data.rs  model.rs
tools/: Dockerfile  Dockerfile.mlflow  bootstrap-machine  create-bucket  create-dev-buckets  create-development-buckets  dashboard_reader_setup.sql  download_model_artifacts.py  git-sync  install.sh  prepare_training_data.py  provision-application-vm  provision-common-vm  provision-trainer-vm  provision-vm  pyproject.toml  ralph_marketplace_budget.py  ralph_marketplace_orchestrator.py  ralph_marketplace_state.py  ralph_marketplace_weights.py  ralph_preflight.sh  run_training_job.py  setup-dashboard-ssh  sync-application  sync_equity_bars_data.py  sync_equity_categories.py  sync_equity_details_data.py  train-tide-model
tools/src/tools/: artifact_watcher.py  build_work_pool_template.py  cache_training_data.py  deploy_training_flow.py  download_model_artifacts.py  prepare_training_data.py  run_training.py  run_training_job.py  seed_minio.py  sync_equity_bars_data.py  vulture_whitelist.py
tools/src/tools/flows/: notifications.py  training_flow.py
tools/tests/: __init__.py  conftest.py  test_artifact_watcher.py  test_build_optimization.py  test_build_work_pool_template.py  test_deploy_training_flow.py  test_download_model_artifacts.py  test_maskfile_configuration.py  test_notifications.py  test_prepare_training_data.py  test_run_training_job.py  test_sync_equity_bars_data.py  test_sync_equity_details_data.py  test_training_flow.py  test_workflow_configuration.py
(+274 files in other folders)
