[package]
name = "data_manager"
version = "0.0.1"
edition = "2021"

[lib]
name = "data_manager"
path = "src/lib.rs"

[[bin]]
name = "data_manager"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
polars = { version = "0.51.0", features = [
  "json",
  "lazy",
  "parquet",
  "temporal",
  "serde",
  "strings",
] }
reqwest = { version = "0.13", features = ["query", "native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
] }
urlencoding = "2.1.3"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "json",
] }
aws-config = "1.8.15"
aws-sdk-s3 = "1.129"
aws-credential-types = "1.2.14"
duckdb = { version = "1.10502.0", features = ["r2d2", "chrono"] }
thiserror = "2.0.3"
tracing-appender = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.13", features = ["json"] }
mockito = "1.7"
serial_test = "3.4"
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = [
  "localstack",
  "postgres",
] }
