[package]
name = "datamanager"
version = "0.0.1"
edition = "2021"

[lib]
name = "datamanager"
path = "src/lib.rs"

[[bin]]
name = "datamanager"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
polars = { version = "0.51.0", features = [
  "json",
  "lazy",
  "parquet",
  "temporal",
  "serde",
  "strings",
] }
reqwest = "0.13.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
urlencoding = "2.1.3"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
aws-config = "1.5"
aws-sdk-s3 = "1.112"
aws-credential-types = "1.2.6"
duckdb = { version = "1.4.3", features = ["r2d2", "chrono"] }
validator = { version = "0.20", features = ["derive"] }
thiserror = "2.0.3"
sentry = { version = "0.35", features = ["tracing", "reqwest", "rustls"] }
sentry-tower = { version = "0.35", features = ["http"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.13", features = ["json"] }
mockito = "1.7"
serial_test = "3.3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["localstack"] }
