[project]
name = "ensemble_manager"
version = "0.0.1"
description = "Ensemble manager service for combining model predictions"
requires-python = "==3.12.10"
dependencies = [
  "internal>=0.0.1",
  "tide>=0.0.1",
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "pandera[polars]>=0.26.0",
  "polars>=1.29.0",
  "requests>=2.32.5",
  "sentry-sdk[fastapi]>=2.0.0",
  "structlog>=25.5.0",
]

[dependency-groups]
dev = ["boto3-stubs[s3,ssm]>=1.38.0"]

[tool.uv.sources]
internal = { workspace = true }
tide = { workspace = true }

[tool.uv]
package = true
src = ["src"]
