[package]
name = "ensemble_model"
version = "0.0.1"
edition = "2021"

[lib]
name = "ensemble_model"
path = "src/lib.rs"

[[bin]]
name = "ensemble_model"
path = "src/main.rs"

[dependencies]
tide_model = { path = "../../models/tide_model" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
burn = { version = "0.16", features = ["ndarray"] }
polars = { version = "0.51", features = ["lazy", "parquet", "strings", "is_in", "semi_anti_join"] }
aws-sdk-s3 = "1.129"
aws-config = "1.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1.0"
tar = "0.4"
thiserror = "2.0"
tempfile = "3.27"

[dev-dependencies]
burn = { version = "0.16", features = ["ndarray"] }
