[project]
name = "equitypricemodel"
version = "0.0.1"
description = "Equity price time-series dense encoder model architecture"
requires-python = "==3.12.10"
dependencies = [
  "internal>=0.0.1",
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "pandera[polars]>=0.26.0",
  "polars>=1.29.0",
  "requests>=2.32.5",
  "sentry-sdk[fastapi]>=2.0.0",
  "structlog>=25.5.0",
  "tinygrad>=0.10.3",
  "numpy>=1.26.4",
]

[dependency-groups]
dev = ["boto3-stubs[s3]>=1.38.0"]

[tool.uv.sources]
internal = { workspace = true }

[tool.uv]
package = true
src = ["src"]
