[project]
name = "portfoliomanager"
version = "0.0.1"
description = "Portfolio prediction and construction service"
requires-python = "==3.12.10"
dependencies = [
  "internal>=0.0.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.27.0",
  "pandera[polars]>=0.26.0",
  "polars>=1.29.0",
  "requests>=2.32.5",
  "alpaca-py>=0.42.1",
  "sentry-sdk[fastapi]>=2.0.0",
  "structlog>=25.5.0",
]

[tool.uv]
package = true
src = ["src"]

[tool.uv.sources]
internal = { workspace = true }
