[package]
name = "tide_model"
version = "0.0.1"
edition = "2021"

[dependencies]
burn = { version = "0.16", features = ["ndarray"] }
polars = { version = "0.51", features = ["lazy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
ndarray = "0.16"
